--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,8 +19,9 @@
 }
 
 .flex.flex-1.flex-col.bg-gray-50 {
-  background:url(https://pan.erogame.space/_next/image/?url=%2Fbg.jpg&w=1920&q=100) no-repeat fixed center;
+  background:url(https://p.inari.site/guest/22-11/23/637e38f7bc383.webp) repeat-y fixed center;
   background-size:100% auto;
+  
 }
 
 .markdown-body ul {
