--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,7 @@
 
 .flex.flex-1.flex-col.bg-gray-50 {
   background:url(https://p.inari.site/guest/22-11/23/637e38f7bc383.webp) no-repeat fixed center;
+  background-size:cover;
 }
 
 .markdown-body ul {
