--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@
 }
 
 .flex.flex-1.flex-col.bg-gray-50 {
-  background:url(https://pan.erogame.space/_next/image/?url=%2Fbg.jpg&w=1920&q=100) no-repeat fixed center;
+  background:url(https://github.com/faustasgard/onedrive-vercel-index/blob/main/public/bg.jpg?raw=true) no-repeat fixed center;
   background-size:cover;
 }
 
